<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/txt1"
        android:textColor="#ED0621"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnchucnang"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#DBDADC"
        android:text="@string/txt2"
        android:textColor="#07000B"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <AnalogClock
            android:id="@+id/analog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="153dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#CECECF"
                android:text="@string/txt3"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btnthoat"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="43dp"
                android:background="#B6B6B6"
                android:text="@string/txt4"
                android:textColor="#000000"
                android:textSize="30sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>